@@ -1,5 +1,45 @@
 package io.opentdf.platform.sdk;
 
+import com.connectrpc.ResponseMessage;
+import com.connectrpc.UnaryBlockingCall;
+import io.opentdf.platform.policy.Algorithm;
+import io.opentdf.platform.policy.Attribute;
+import io.opentdf.platform.policy.AttributeRuleTypeEnum;
+import io.opentdf.platform.policy.KasPublicKey;
+import io.opentdf.platform.policy.KasPublicKeyAlgEnum;
+import io.opentdf.platform.policy.KasPublicKeySet;
+import io.opentdf.platform.policy.KeyAccessServer;
+import io.opentdf.platform.policy.Namespace;
+import io.opentdf.platform.policy.PublicKey;
+import io.opentdf.platform.policy.SimpleKasKey;
+import io.opentdf.platform.policy.SimpleKasPublicKey;
+import io.opentdf.platform.policy.Value;
+import io.opentdf.platform.policy.attributes.AttributesServiceClient;
+import io.opentdf.platform.policy.attributes.GetAttributeValuesByFqnsRequest;
+import io.opentdf.platform.policy.attributes.GetAttributeValuesByFqnsResponse;
+import io.opentdf.platform.sdk.Autoconfigure.AttributeValueFQN;
+import io.opentdf.platform.sdk.Autoconfigure.Granter;
+import io.opentdf.platform.sdk.Autoconfigure.Granter.AttributeBooleanExpression;
+import io.opentdf.platform.sdk.Autoconfigure.Granter.BooleanKeyExpression;
+import io.opentdf.platform.sdk.Autoconfigure.KeySplitStep;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiFunction;
+import java.util.function.Supplier;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -10,39 +50,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-
-import com.connectrpc.ResponseMessage;
-import com.connectrpc.UnaryBlockingCall;
-import io.opentdf.platform.policy.Attribute;
-import io.opentdf.platform.policy.AttributeRuleTypeEnum;
-import io.opentdf.platform.policy.KasPublicKey;
-import io.opentdf.platform.policy.KasPublicKeyAlgEnum;
-import io.opentdf.platform.policy.KasPublicKeySet;
-import io.opentdf.platform.policy.KeyAccessServer;
-import io.opentdf.platform.policy.Namespace;
-import io.opentdf.platform.policy.PublicKey;
-import io.opentdf.platform.policy.Value;
-import io.opentdf.platform.policy.attributes.AttributesServiceClient;
-import io.opentdf.platform.policy.attributes.GetAttributeValuesByFqnsRequest;
-import io.opentdf.platform.policy.attributes.GetAttributeValuesByFqnsResponse;
-import io.opentdf.platform.sdk.Autoconfigure.AttributeValueFQN;
-import io.opentdf.platform.sdk.Autoconfigure.Granter.AttributeBooleanExpression;
-import io.opentdf.platform.sdk.Autoconfigure.Granter.BooleanKeyExpression;
-import io.opentdf.platform.sdk.Autoconfigure.KeySplitStep;
-import io.opentdf.platform.sdk.Autoconfigure.Granter;
-
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 public class AutoconfigureTest {
 
@@ -56,6 +63,16 @@ public class AutoconfigureTest {
     public static final String SPECIFIED_KAS = "https://attr.kas.com/";
     public static final String EVEN_MORE_SPECIFIC_KAS = "https://value.kas.com/";
     private static final String NAMESPACE_KAS = "https://namespace.kas.com/";
+    private static final SimpleKasKey NAMESPACE_KAS_KEY = SimpleKasKey.newBuilder().setKasUri("https://mapped.example.com").setKasId("mapped").setPublicKey(
+            SimpleKasPublicKey.newBuilder().setAlgorithm(Algorithm.ALGORITHM_EC_P521).setPem("namespacekey").setKid("namespacekeykid").build()
+    ).build();
+    private static final SimpleKasKey ATTRIBUTE_KEY = SimpleKasKey.newBuilder().setKasUri("https://mapped.example.com").setKasId("mapped").setPublicKey(
+            SimpleKasPublicKey.newBuilder().setAlgorithm(Algorithm.ALGORITHM_EC_P521).setPem("attrpem").setKid("attrkeykid").build()
+    ).build();
+    private static final SimpleKasKey VALUE_KEY = SimpleKasKey.newBuilder().setKasUri("https://mapped.example.com").setKasId("mapped").setPublicKey(
+            SimpleKasPublicKey.newBuilder().setAlgorithm(Algorithm.ALGORITHM_EC_P521).setPem("valuepem").setKid("valuekeykid").build()
+    ).build();
+    private static Autoconfigure.AttributeNameFQN UNMAPPED;
     private static Autoconfigure.AttributeNameFQN SPKSPECKED;
     private static Autoconfigure.AttributeNameFQN SPKUNSPECKED;
 
@@ -64,6 +81,8 @@ public class AutoconfigureTest {
     private static Autoconfigure.AttributeNameFQN REL;
     private static Autoconfigure.AttributeNameFQN UNSPECKED;
     private static Autoconfigure.AttributeNameFQN SPECKED;
+    private static Autoconfigure.AttributeNameFQN MAPPED;
+    private static Autoconfigure.AttributeNameFQN SPKMAPPED;
 
     private static Autoconfigure.AttributeValueFQN clsA;
     private static Autoconfigure.AttributeValueFQN clsS;
@@ -84,6 +103,9 @@ public class AutoconfigureTest {
     private static Autoconfigure.AttributeValueFQN spk2spk2uns;
     private static Autoconfigure.AttributeValueFQN spk2spk2spk;
 
+    private static Autoconfigure.AttributeValueFQN mp2uns2uns;
+    private static Autoconfigure.AttributeValueFQN mp2uns2mp;
+
     @BeforeAll
     public static void setup() throws AutoConfigureException {
         // Initialize the FQNs (Fully Qualified Names)
@@ -92,8 +114,11 @@ public class AutoconfigureTest {
         REL = new Autoconfigure.AttributeNameFQN("https://virtru.com/attr/Releasable%20To");
         UNSPECKED = new Autoconfigure.AttributeNameFQN("https://other.com/attr/unspecified");
         SPECKED = new Autoconfigure.AttributeNameFQN("https://other.com/attr/specified");
+        MAPPED = new Autoconfigure.AttributeNameFQN("https://other.com/attr/mapped");
+        UNMAPPED = new Autoconfigure.AttributeNameFQN("https://mapped.com/attr/unspecified");
         SPKUNSPECKED = new Autoconfigure.AttributeNameFQN("https://hasgrants.com/attr/unspecified");
         SPKSPECKED = new Autoconfigure.AttributeNameFQN("https://hasgrants.com/attr/specified");
+        SPKMAPPED = new Autoconfigure.AttributeNameFQN("https://hasgrants.com/attr/mapped");
 
         clsA = new Autoconfigure.AttributeValueFQN("https://virtru.com/attr/Classification/value/Allowed");
         clsS = new Autoconfigure.AttributeValueFQN("https://virtru.com/attr/Classification/value/Secret");
@@ -117,6 +142,9 @@ public class AutoconfigureTest {
         spk2uns2spk = new Autoconfigure.AttributeValueFQN("https://hasgrants.com/attr/unspecified/value/specked");
         spk2spk2uns = new Autoconfigure.AttributeValueFQN("https://hasgrants.com/attr/specified/value/unspecked");
         spk2spk2spk = new Autoconfigure.AttributeValueFQN("https://hasgrants.com/attr/specified/value/specked");
+
+        mp2uns2uns = new Autoconfigure.AttributeValueFQN("https://mapped.com/attr/unspecified/value/unspecked");
+        mp2uns2mp = new Autoconfigure.AttributeValueFQN("https://mapped.com/attr/unspecified/value/mapped");
     }
 
     private static String spongeCase(String s) {
@@ -181,6 +209,7 @@ public class AutoconfigureTest {
         Namespace ns1 = Namespace.newBuilder().setId("v").setName("virtru.com").setFqn("https://virtru.com").build();
         Namespace ns2 = Namespace.newBuilder().setId("o").setName("other.com").setFqn("https://other.com").build();
         Namespace ns3 = Namespace.newBuilder().setId("h").setName("hasgrants.com").addGrants(KeyAccessServer.newBuilder().setUri(NAMESPACE_KAS).build()).setFqn("https://hasgrants.com").build();
+        Namespace ns4 = Namespace.newBuilder().setId("m").setName("mapped.com").addKasKeys(NAMESPACE_KAS_KEY).build();
 
         String key = fqn.getKey();
         if (key.equals(CLS.getKey())) {
@@ -214,6 +243,17 @@ public class AutoconfigureTest {
         } else if (key.equals(SPKUNSPECKED.getKey())) {
             return Attribute.newBuilder().setId("SPKUNSPK").setNamespace(ns3)
                     .setName("unspecified").setRule(AttributeRuleTypeEnum.ATTRIBUTE_RULE_TYPE_ENUM_ANY_OF)
+                    .setName(fqn.toString())
+                    .build();
+        } else if (key.equals(MAPPED.getKey())) {
+            return Attribute.newBuilder().setId(MAPPED.getKey()).setNamespace(ns4)
+                    .setName("mapped attribute").setRule(AttributeRuleTypeEnum.ATTRIBUTE_RULE_TYPE_ENUM_ANY_OF)
+                    .setKasKeys(0, ATTRIBUTE_KEY)
+                    .setName(fqn.toString())
+                    .build();
+        } else if (key.equals(UNMAPPED.getKey())) {
+            return Attribute.newBuilder().setId(UNMAPPED.getKey()).setNamespace(ns4)
+                    .setName("unmapped attribute").setRule(AttributeRuleTypeEnum.ATTRIBUTE_RULE_TYPE_ENUM_ANY_OF)
                     .setName(fqn.toString())
                     .build();
         }
@@ -287,7 +327,13 @@ public class AutoconfigureTest {
                 p = p.toBuilder().addGrants(KeyAccessServer.newBuilder().setUri(EVEN_MORE_SPECIFIC_KAS).build())
                         .build();
             }
+        } else if (Objects.equals(UNMAPPED.getKey(), an.getKey())) {
+            if (fqn.value().equalsIgnoreCase("mapped")) {
+                p = p.toBuilder().addKasKeys(VALUE_KEY)
+                        .build();
+            }
         }
+
         return p;
     }
 
@@ -368,7 +414,7 @@ public class AutoconfigureTest {
         for (ConfigurationTestCase tc : testCases) {
             assertDoesNotThrow(() -> {
                 List<Value> v = valuesToPolicy(tc.getPolicy().toArray(new AttributeValueFQN[0]));
-                Granter grants = Autoconfigure.newGranterFromAttributes(v.toArray(new Value[0]));
+                Granter grants = Autoconfigure.newGranterFromAttributes(null, v.toArray(new Value[0]));
                 assertThat(grants).isNotNull();
                 assertThat(grants.getGrants()).hasSize(tc.getSize());
                 assertThat(policyToStringKeys(tc.getPolicy())).containsAll(grants.getGrants().keySet());
@@ -451,7 +497,7 @@ public class AutoconfigureTest {
                                 new KeySplitStep(KAS_US_HCS, "2"), new KeySplitStep(KAS_US_SA, "3"))));
 
         for (ReasonerTestCase tc : testCases) {
-            Granter reasoner = Autoconfigure.newGranterFromAttributes(
+            Granter reasoner = Autoconfigure.newGranterFromAttributes(null,
                     valuesToPolicy(tc.getPolicy().toArray(new AttributeValueFQN[0])).toArray(new Value[0]));
             assertThat(reasoner).isNotNull();
 
@@ -467,13 +513,31 @@ public class AutoconfigureTest {
             var wrapper = new Object() {
                 int i = 0;
             };
-            List<KeySplitStep> plan = reasoner.plan(tc.getDefaults(), () -> {
-                        return String.valueOf(wrapper.i++ + 1);
-                    }
-
-            );
-            assertThat(plan).isEqualTo(tc.getPlan());
+            List<KeySplitStep> plan = reasoner.getSplits(tc.getDefaults(), () -> String.valueOf(wrapper.i++ + 1), Optional::empty);
+            assertThat(plan)
+                    .as(tc.name)
+                    .isEqualTo(tc.getPlan());
         }
+    }
+
+    @Test
+    void testUsingAttributeMappedAtNamespace() {
+        Granter granter = Autoconfigure.newGranterFromAttributes(new KASKeyCache(), mockValueFor(mp2uns2uns));
+        var counter = new AtomicInteger(0);
+        var splitPlan = granter.getSplits(Collections.emptyList(), () -> Integer.toString(counter.getAndIncrement()), Optional::empty);
+        assertThat(splitPlan).isEqualTo(List.of(new KeySplitStep("https://mapped.example.com", "", NAMESPACE_KAS_KEY.getPublicKey().getKid())));
+    }
+
+    @Test
+    void testUsingAttributeMappedAtMultiplePlaces() {
+        var attributes = new Value[]{mockValueFor(mp2uns2uns), mockValueFor(mp2uns2mp)};
+        Granter granter = Autoconfigure.newGranterFromAttributes(new KASKeyCache(), attributes);
+        var counter = new AtomicInteger(0);
+        var splitPlan = granter.getSplits(Collections.emptyList(), () -> Integer.toString(counter.getAndIncrement()), Optional::empty);
+        assertThat(splitPlan).isEqualTo(List.of(
+                new KeySplitStep(NAMESPACE_KAS_KEY.getKasUri(), "0", NAMESPACE_KAS_KEY.getPublicKey().getKid()),
+                new KeySplitStep(VALUE_KEY.getKasUri(), "0", VALUE_KEY.getPublicKey().getKid())
+        ));
     }
 
     GetAttributeValuesByFqnsResponse getResponse(GetAttributeValuesByFqnsRequest req) {
@@ -547,7 +611,7 @@ public class AutoconfigureTest {
                         List.of(KAS_US),
                         List.of(new KeySplitStep(EVEN_MORE_SPECIFIC_KAS, ""))),
                 new ReasonerTestCase(
-                        "uns.uns & uns.spk => spk",
+                        "uns.uns & spk.spk => spk",
                         List.of(uns2uns, spk2spk),
                         List.of(KAS_US),
                         List.of(new KeySplitStep(EVEN_MORE_SPECIFIC_KAS, ""))),
@@ -598,12 +662,11 @@ public class AutoconfigureTest {
             var wrapper = new Object() {
                 int i = 0;
             };
-            List<KeySplitStep> plan = reasoner.plan(tc.getDefaults(), () -> {
-                        return String.valueOf(wrapper.i++ + 1);
-                    }
+            List<KeySplitStep> plan = reasoner.getSplits(tc.getDefaults(), () -> String.valueOf(wrapper.i++ + 1), Optional::empty);
+            assertThat(plan)
+                    .as(tc.name)
+                    .hasSameElementsAs(tc.getPlan());
 
-            );
-            assertThat(plan).hasSameElementsAs(tc.getPlan());
         }
     }
 
@@ -691,7 +754,7 @@ public class AutoconfigureTest {
         private final List<KeySplitStep> plan;
 
         ReasonerTestCase(String name, List<AttributeValueFQN> policy, List<String> defaults, String ats, String keyed,
-                String reduced, List<KeySplitStep> plan) {
+                         String reduced, List<KeySplitStep> plan) {
             this.name = name;
             this.policy = policy;
             this.defaults = defaults;
@@ -744,13 +807,11 @@ public class AutoconfigureTest {
     void testStoreKeysToCache_NoKeys() {
         KASKeyCache keyCache = Mockito.mock(KASKeyCache.class);
         KeyAccessServer kas1 = KeyAccessServer.newBuilder().setPublicKey(
-                PublicKey.newBuilder().setCached(
-                        KasPublicKeySet.newBuilder()))
+                        PublicKey.newBuilder().setCached(
+                                KasPublicKeySet.newBuilder()))
                 .build();
 
-        List<KeyAccessServer> kases = List.of(kas1);
-
-        Autoconfigure.storeKeysToCache(kases, keyCache);
+        Autoconfigure.storeKeysToCache(List.of(kas1), Collections.emptyList(), keyCache);
 
         verify(keyCache, never()).store(any(Config.KASInfo.class));
     }
@@ -780,14 +841,11 @@ public class AutoconfigureTest {
                 .setUri("https://example.com/kas")
                 .build();
 
-        // Add the KeyAccessServer to a list
-        List<KeyAccessServer> kases = List.of(kas1);
-
         // Call the method under test
-        Autoconfigure.storeKeysToCache(kases, keyCache);
+        Autoconfigure.storeKeysToCache(List.of(kas1), Collections.emptyList(), keyCache);
 
         // Verify that the key was stored in the cache
-        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1");
+        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1", "test-kid");
         assertNotNull(storedKASInfo);
         assertEquals("https://example.com/kas", storedKASInfo.URL);
         assertEquals("test-kid", storedKASInfo.KID);
@@ -826,21 +884,18 @@ public class AutoconfigureTest {
                 .setUri("https://example.com/kas")
                 .build();
 
-        // Add the KeyAccessServer to a list
-        List<KeyAccessServer> kases = List.of(kas1);
-
         // Call the method under test
-        Autoconfigure.storeKeysToCache(kases, keyCache);
+        Autoconfigure.storeKeysToCache(List.of(kas1), Collections.emptyList(), keyCache);
 
         // Verify that the key was stored in the cache
-        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1");
+        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1", "test-kid");
         assertNotNull(storedKASInfo);
         assertEquals("https://example.com/kas", storedKASInfo.URL);
         assertEquals("test-kid", storedKASInfo.KID);
         assertEquals("ec:secp256r1", storedKASInfo.Algorithm);
         assertEquals("public-key-pem", storedKASInfo.PublicKey);
 
-        Config.KASInfo storedKASInfo2 = keyCache.get("https://example.com/kas", "rsa:2048");
+        Config.KASInfo storedKASInfo2 = keyCache.get("https://example.com/kas", "rsa:2048", "test-kid-2");
         assertNotNull(storedKASInfo2);
         assertEquals("https://example.com/kas", storedKASInfo2.URL);
         assertEquals("test-kid-2", storedKASInfo2.KID);
@@ -849,7 +904,7 @@ public class AutoconfigureTest {
     }
 
     GetAttributeValuesByFqnsResponse getResponseWithGrants(GetAttributeValuesByFqnsRequest req,
-            List<KeyAccessServer> grants) {
+                                                           List<KeyAccessServer> grants) {
         GetAttributeValuesByFqnsResponse.Builder builder = GetAttributeValuesByFqnsResponse.newBuilder();
 
         for (String v : req.getFqnsList()) {
@@ -901,13 +956,15 @@ public class AutoconfigureTest {
 
         AttributesServiceClient attributesServiceClient = mock(AttributesServiceClient.class);
         when(attributesServiceClient.getAttributeValuesByFqnsBlocking(any(), any())).thenAnswer(invocation -> {
-            var request = (GetAttributeValuesByFqnsRequest)invocation.getArgument(0);
-            return new UnaryBlockingCall<GetAttributeValuesByFqnsResponse>(){
+            var request = (GetAttributeValuesByFqnsRequest) invocation.getArgument(0);
+            return new UnaryBlockingCall<GetAttributeValuesByFqnsResponse>() {
                 @Override
                 public ResponseMessage<GetAttributeValuesByFqnsResponse> execute() {
                     return new ResponseMessage.Success<>(getResponseWithGrants(request, List.of(kas1)), Collections.emptyMap(), Collections.emptyMap());
                 }
-                @Override public void cancel() {
+
+                @Override
+                public void cancel() {
                     // not really calling anything
                 }
             };
@@ -920,14 +977,14 @@ public class AutoconfigureTest {
         assertThat(reasoner).isNotNull();
 
         // Verify that the key was stored in the cache
-        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1");
+        Config.KASInfo storedKASInfo = keyCache.get("https://example.com/kas", "ec:secp256r1", "test-kid");
         assertNotNull(storedKASInfo);
         assertEquals("https://example.com/kas", storedKASInfo.URL);
         assertEquals("test-kid", storedKASInfo.KID);
         assertEquals("ec:secp256r1", storedKASInfo.Algorithm);
         assertEquals("public-key-pem", storedKASInfo.PublicKey);
 
-        Config.KASInfo storedKASInfo2 = keyCache.get("https://example.com/kas", "rsa:2048");
+        Config.KASInfo storedKASInfo2 = keyCache.get("https://example.com/kas", "rsa:2048", "test-kid-2");
         assertNotNull(storedKASInfo2);
         assertEquals("https://example.com/kas", storedKASInfo2.URL);
         assertEquals("test-kid-2", storedKASInfo2.KID);
@@ -935,4 +992,155 @@ public class AutoconfigureTest {
         assertEquals("public-key-pem-2", storedKASInfo2.PublicKey);
     }
 
+    @Test
+    void testUsingBaseKeyWhenNoMappedKeysOrGrants() {
+        Autoconfigure.Granter granter = Autoconfigure.newGranterFromAttributes(null);
+        SimpleKasKey key = SimpleKasKey.newBuilder()
+                .setKasUri("https://example.com/kas")
+                .setPublicKey(
+                        SimpleKasPublicKey.newBuilder()
+                                .setKid("thenewkid")
+                                .setPem("anotherpem")
+                                .setAlgorithm(Algorithm.ALGORITHM_EC_P521)
+                ).build();
+
+        var splits = granter.getSplits(
+                List.of("https://example.org/kas2"),
+                () -> {
+                    throw new IllegalStateException("the plan should have a single element");
+                },
+                () -> Optional.of(key));
+        assertThat(splits).hasSize(1);
+        assertThat(splits.get(0)).isEqualTo(new KeySplitStep("https://example.com/kas", "", "thenewkid"));
+    }
+
+    @Test
+    void testUsingDefaultKasesWhenNothingElseProvided() {
+        Autoconfigure.Granter granter = Autoconfigure.newGranterFromAttributes(null);
+        var counter = new AtomicInteger();
+        Supplier<String> splitGen = () -> String.valueOf(counter.getAndIncrement());
+        var splits = granter.getSplits(
+                List.of("https://example.org/kas1", "https://example.org/kas2"),
+                splitGen,
+                Optional::empty);
+
+        assertThat(splits)
+                .hasSize(2)
+                .asList().containsExactly(
+                    new KeySplitStep("https://example.org/kas1", "0", null),
+                    new KeySplitStep("https://example.org/kas2", "1", null)
+                );
+    }
+
+    @Test
+    void createsGranterFromAttributeValues() {
+        // Arrange
+        Config.TDFConfig config = new Config.TDFConfig();
+        config.attributeValues = List.of(mockValueFor(spk2spk), mockValueFor(rel2gbr));
+
+        SDK.Services services = mock(SDK.Services.class);
+        SDK.KAS kas = mock(SDK.KAS.class);
+        when(services.kas()).thenReturn(kas);
+        when(services.attributes()).thenThrow(new IllegalStateException("should never use the attribute service when attributes are provided"));
+        when(kas.getKeyCache()).thenReturn(null); // No cache needed for this test
+
+        // Act
+        Autoconfigure.Granter granter = Autoconfigure.createGranter(services, config);
+
+        // Assert
+        assertThat(granter).isNotNull();
+        assertThat(granter.getPolicy()).hasSize(2);
+        assertThat(granter.getPolicy()).containsExactlyInAnyOrder(
+                new AttributeValueFQN("https://other.com/attr/specified/value/specked"),
+                new AttributeValueFQN("https://virtru.com/attr/Releasable%20To/value/GBR")
+        );
+    }
+
+    @Test
+    void createsGranterFromService() {
+        // Arrange
+        SDK.Services services = mock(SDK.Services.class);
+        SDK.KAS kas = mock(SDK.KAS.class);
+        AttributesServiceClient attributesServiceClient = mock(AttributesServiceClient.class);
+
+        // Prepare a request and a mocked response
+        List<AttributeValueFQN> policy = List.of(
+                new AttributeValueFQN("https://other.com/attr/specified/value/specked"),
+                new AttributeValueFQN("https://virtru.com/attr/Releasable%20To/value/GBR")
+        );
+
+        when(services.kas()).thenReturn(kas);
+        when(services.attributes()).thenReturn(attributesServiceClient);
+
+        // Mock the attribute service to return a response with the expected values
+        when(attributesServiceClient.getAttributeValuesByFqnsBlocking(any(), any())).thenAnswer(invocation -> {
+            GetAttributeValuesByFqnsResponse.Builder builder = GetAttributeValuesByFqnsResponse.newBuilder();
+            for (AttributeValueFQN fqn : policy) {
+                Value value = Value.newBuilder()
+                        .setId(fqn.toString())
+                        .setFqn(fqn.toString())
+                        .build();
+                builder.putFqnAttributeValues(fqn.toString(),
+                        GetAttributeValuesByFqnsResponse.AttributeAndValue.newBuilder()
+                                .setValue(value)
+                                .build());
+            }
+            return TestUtil.successfulUnaryCall(builder.build());
+        });
+
+        // Act
+        Autoconfigure.Granter granter = Autoconfigure.createGranter(services, new Config.TDFConfig() {{
+            attributeValues = null; // force use of service
+            attributes = policy;
+        }});
+
+        // Assert
+        assertThat(granter).isNotNull();
+        // The policy should be empty because attributeValues is null, but the test ensures the service is called
+        // If you want to check the service call, verify it:
+        verify(services).attributes();
+    }
+
+    @Test
+    void getSplits_usesAutoconfigurePlan_whenAutoconfigureTrue() {
+        var tdfConfig = new Config.TDFConfig();
+        tdfConfig.autoconfigure = true;
+        tdfConfig.kasInfoList = new ArrayList<>();
+        tdfConfig.splitPlan = null;
+
+        var kas = Mockito.mock(SDK.KAS.class);
+        Mockito.when(kas.getKeyCache()).thenReturn(new KASKeyCache());
+        Config.KASInfo kasInfo = new Config.KASInfo() {{
+            URL = "https://kas.example.com";
+            Algorithm = "ec:secp256r1";
+            KID = "kid";
+        }};
+        Mockito.when(kas.getPublicKey(any())).thenReturn(kasInfo);
+
+        var services = new FakeServicesBuilder().setKas(kas).build();
+
+        // Mock granterFactory to return a granter with a known split plan
+        var expectedSplit = new Autoconfigure.KeySplitStep("https://kas.example.com", "", "kid");
+        var granter = Mockito.mock(Autoconfigure.Granter.class);
+        Mockito.when(granter.getSplits(
+                        Mockito.anyList(),
+                        Mockito.any(),
+                        Mockito.any()))
+                .thenReturn(List.of(expectedSplit));
+
+        BiFunction<SDK.Services, Config.TDFConfig, Granter> granterFactory =
+                (s, c) -> granter;
+
+        var planner = new Planner(tdfConfig, services, granterFactory);
+
+        // Act
+        var splits = planner.getSplits(tdfConfig);
+
+        // Assert
+        assertThat(splits).containsKey("");
+        assertThat(splits.get("")).hasSize(1);
+        assertThat(splits.get("").get(0).URL).isEqualTo("https://kas.example.com");
+        assertThat(splits.get("").get(0).KID).isEqualTo("kid");
+        assertThat(splits.get("").get(0).Algorithm).isEqualTo("ec:secp256r1");
+    }
 }
